--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
       <div class="container" style="margin-top:10px;">
-          <button type="button" name="button" class="btn btn-sm btn-info right">log</button>
+          <button type="button" name="button" class="btn btn-sm btn-info right" id="log">log</button>
       </div>
       <h4>shadowsocks nw</h4>
       <form class="form-horizontal" action="index.html" method="post">
@@ -64,6 +64,15 @@
             </div>
         </div>
       </form>
+  </div>
+  <!-- log panel -->
+  <div class="tab tab-hidden" id="log-tab">
+      <div class="icon-x">
+          X
+      </div>
+      <ul class="list" id="log-list">
+          
+      </ul>
   </div>
 </body>
 
