--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>shadowsocks</title>
-  <script src="./js/jquery.js" charset="utf-8"></script>
+  <script src="./js/jquery.js" charset="utf-8" onload="window.$ = window.jQuery = module.exports;"></script>
   <script src="./js/bootstrap.js" charset="utf-8"></script>
   <script src="./js/index.js" charset="utf-8"></script>
   <link rel="stylesheet" href="./css/bootstrap.css" media="screen" title="no title" charset="utf-8">
@@ -71,7 +71,7 @@
           X
       </div>
       <ul class="list" id="log-list">
-          
+
       </ul>
   </div>
 </body>
